--- a/app.json
+++ b/app.json
@@ -14,19 +14,19 @@
     "env": {
         "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
-            "value": ""
+            "value": "00d42b460cef01c13d97dad1f417194e"
         },
         "API_ID": {
             "description": "Your API ID from my.telegram.org",
-            "value": ""
+            "value": "19987622"
         },
         "BOT_TOKEN": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "5587381762:AAFn1SttATDWuuPlEqFslZx9aeKaEZC0YbU"
         },
         "BOT_UN": {
             "description": "Your bot username here. Do not use '@'.",
-            "value": ""
+            "value": "genmediaconvertbot"
         }
     },
     "buildpacks": [
